--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,7 @@ body.dark {
     display: flex;
     justify-content: space-between;
     width: 225px;
+    margin-top: 20em;
 }
 
 @media screen and (min-width: 760px) {
